# Symars

./: .gitignore  Cargo.toml  README.md  dev_docs.typ  examples.ipynb  pyproject.toml  user_docs.typ
docs/: user_docs.typ
examples/: mat.ipynb
rust_generated/: Cargo.toml  fp.toml
rust_generated/benches/: compare_cached.rs
rust_generated/src/: main.rs
rust_generated/src/sym/: gen_cached.rs  gen_mat_array.rs  gen_mat_faer.rs  gen_mat_nalgebra.rs  gen_sparse.rs  gen_uni.rs  gen_vec_faer.rs  mod.rs
src/: main.rs
src/sym/: gen_mat.rs  gen_mat_nalgebra.rs  gen_uni.rs  generated.rs  mod.rs
src/symars/: __init__.py  dense.py  meta.py  scalar.py  scalar_cached.py  sparse.py  uni.py
src/symars/dense_impl/: array.py  faer.py  nalgebra.py
sym/: generated.rs  mat.ipynb  sym.ipynb  sym2rust.ipynb
sym/symars/: faer.py  matrix_base.py  meta.py  nalgebra.py  uni.py
symars/: __init__.py  meta.py  nalgebra.py
